--- a/01_neural_networks_fundamentals.ipynb
+++ b/01_neural_networks_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1HQ6F_Tju2hSWI0iPrKnrzaSQk6RKCJG2",
-      "authorship_tag": "ABX9TyMUKODNx9yRPFBpsoA7OZyd",
+      "authorship_tag": "ABX9TyMUHu6o6Vy7b9qGtlwXsxEj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -800,6 +800,49 @@
       "metadata": {
         "id": "58nXLfyf9vTi"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**keras callbacks**"
+      ],
+      "metadata": {
+        "id": "1Ruy7JHQzvD0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c639ab4f"
+      },
+      "source": [
+        "**Keras Callbacks**\n",
+        "\n",
+        "Les Keras Callbacks sont des fonctions spéciales que vous pouvez appliquer pendant l'entraînement d'un modèle (lorsque vous appelez `model.fit()`). Elles vous permettent de personnaliser le comportement du modèle pendant l'entraînement, de surveiller ses performances, de sauvegarder le modèle, ou même d'arrêter l'entraînement plus tôt dans certaines conditions.\n",
+        "\n",
+        "En d'autres termes, les callbacks sont des outils pour \"rappeler\" certaines actions à différents moments du processus d'entraînement (au début d'une époque, à la fin d'un batch, etc.).\n",
+        "\n",
+        "**Pourquoi utiliser des Callbacks ?**\n",
+        "\n",
+        "*   **Surveillance :** Suivre des métriques spécifiques pendant l'entraînement (comme la précision sur les données de validation) et les visualiser.\n",
+        "*   **Sauvegarde de modèle :** Enregistrer automatiquement le modèle à intervalles réguliers ou lorsque certaines métriques atteignent un certain seuil.\n",
+        "*   **Ajustement du Learning Rate :** Modifier dynamiquement le taux d'apprentissage (learning rate) pendant l'entraînement en fonction des performances.\n",
+        "*   **Arrêt Précoce (Early Stopping) :** Arrêter l'entraînement si la performance sur les données de validation cesse de s'améliorer, pour éviter le surapprentissage.\n",
+        "*   **Visualisation :** Intégrer des outils de visualisation comme TensorBoard pour suivre l'entraînement en temps réel.\n",
+        "*   **Personnalisation :** Créer vos propres callbacks pour des actions spécifiques.\n",
+        "\n",
+        "**Exemples de Callbacks Courants :**\n",
+        "\n",
+        "*   `ModelCheckpoint`: Sauvegarde le modèle ou les poids du modèle. Très utile pour reprendre l'entraînement en cas d'interruption ou pour sauvegarder le meilleur modèle.\n",
+        "*   `EarlyStopping`: Arrête l'entraînement lorsque la métrique surveillée ne s'améliore plus après un certain nombre d'époques (patience).\n",
+        "*   `ReduceLROnPlateau`: Réduit le taux d'apprentissage si la métrique surveillée cesse de s'améliorer.\n",
+        "*   `TensorBoard`: Écrit des logs pour TensorBoard, un outil de visualisation puissant pour suivre l'entraînement.\n",
+        "*   `CSVLogger`: Enregistre les résultats de l'entraînement (perte, métriques) dans un fichier CSV.\n",
+        "\n",
+        "**Comment les utiliser ?**\n",
+        "\n",
+        "Vous passez une liste de callbacks à l'argument `callbacks` de la méthode `model.fit()`."
+      ]
     }
   ]
 }
